static_resources/css/site.css
/* Check and delete styles that conflict in custom.css*/

body {
	padding-top: 40px;
    background-color: #f5f5f5;
    background-image: url("/images/whitey.png");
}

.placeholder {
	color: #999;
}

#jump-top {
	position: fixed;
	right: 10px;
	bottom: 10px;
	margin: 0;
	cursor: pointer;
}

#content-container {
	margin-left: 0;
}

#content-container .avatar {
	display: none;
}

#team-nav {
	word-wrap: break-word;
}

abbr.timeago {
	border: none;
	cursor: default;
	color: #AAA;
	display: none;
}

.comment .avatar-container {
	border-left: 1px solid #EEE;
}

.avatar-container {
	width: 65px;
	overflow: hidden;
}

.post > .media-body, .comment > .media-body  {
	margin-left: 65px;
}

#left-column {
	-moz-border-radius-bottomright: 0;
    -webkit-border-bottom-right-radius: 0;
	border-right-width: 0px;
	border-top-width: 0px;
}

.comment-form-container {
	-moz-border-radius: 0;
    -webkit-border-radius: 0;
	padding: 0;
	margin: 0;
}

#content-container > .hero-unit, #left-column {
    -moz-border-radius-topleft: 0;
    -webkit-border-top-left-radius: 0;
	-moz-border-radius-topright: 0;
    -webkit-border-top-right-radius: 0;
}

.loading-spinner {
    background: rgba(255,255,255,0.5) url('/images/ajax-loader.gif') no-repeat center center;
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
}

.avatar-container {
	z-index: 1;
	background-color: white;
}

.loading-spinner-container {
    position: relative;
}

.spacing-right {
	margin-right: 10px;
}

#self-identity {
	margin-right: 30px;
}

.container-fluid {
	display: inline-block;
	text-align: left;
}

.navbar-inner .container {
    max-width: 900px;
}

.navbar .avatar {
    margin-top: -5px;
	display: hide;
    padding-right: 5px;
}

.name {
	margin-left: 5px;
}

.post, .comment {
	margin: 0;
	word-wrap: break-word;
	min-height: 65px;
}

.comments {
	margin-top: 5px;
}

.post {
	background-color: white;
	border-top: 1px solid #EEE;
}

.post-message, .comment-message {
	word-wrap: break-word;
	margin-left: 5px;
	line-height: 17px;
}


.media .pull-left {
	margin-right: 0;
}

.comment {
	border-top: 1px solid #EEE;
}

.comment-form {
	margin: 0;
}

.comment-box {
	margin: 0 5px !important;
}

.comment-form input[type="text"] {
	width: 50%;
}

#footer {
	font-size: 9pt;
	padding: 0 3px;
	color: #AAA;
}

textarea {
    height: 100px;
	margin: 0;
    resize: none;
}

.hero-unit {
	text-align: left;
	margin-bottom: 0px;
    padding: 9px 19px 9px;
    background-color: #fff;
    border: 1px solid #e5e5e5;
    -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
            border-radius: 5px;
    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
       -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
            box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
    font-size: 14px;
}

ul.errorlist {
	margin: 0;
	padding: 0 0 0 15px;
	list-style: none;
}

.container-narrow {
    margin: 0 auto;
    max-width: 940px;
}

.modal form {
	margin: 0;
}

.validity {
	margin-left: 10px;
	font-weight: bold;
}

.validity .valid-email {
    color: green;
}

.validity .invalid-email {
	color: red;
}

.people-list input {
	margin-bottom: 0;
}

.people-list .person-email {
	margin-bottom: 10px;
}

